syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "MasterDataService";

package customer;

service CustomerProto{
	rpc GetCustomerById (CustomerIdRequest) returns (CustomerResponse);
    rpc CreateCustomer (CustomerCreationRequest) returns (CustomerResponse);
    rpc DeleteCustomer (CustomerIdRequest) returns (google.protobuf.Empty);
    rpc UpdateCustomer (CustomerUpdateRequest) returns (google.protobuf.Empty);
    rpc GetCustomerList (google.protobuf.Empty) returns (CustomerListResponse);
}

message CustomerListResponse{
    repeated CustomerResponse Customers = 1;
}

message CustomerUpdateRequest{
	string CustomerId = 1;
    google.protobuf.StringValue FirstName = 2 ;
    google.protobuf.StringValue LastName = 3;
    google.protobuf.StringValue Email = 4; 
    google.protobuf.StringValue Address = 5;
    bool tracking = 6;
}

message CustomerCreationRequest{
    string FirstName = 1;
    string LastName = 2;
    string Email = 3;
    string Address = 4;
}

message ErrorResponse{
    int32 ErrorCode = 1;
    string Message = 2;
}

message CustomerResponse{
	string CustomerId = 1;
    string FirstName = 2 ;
    string LastName = 3;
    string Email = 4; 
    string Address = 5;
}

message CustomerIdRequest{
    string CustomerId = 1;
    bool tracking = 2;
}