syntax = "proto3";

option csharp_namespace = "OrderingService.Protos";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package orderItem;

service OrderItemProto{
	rpc GetItem(GetItemRequest) returns (ItemResponse);
	rpc GetItemsFromOrder(OrderItemIdRequest) returns (ItemListResponse);
	rpc CreateOrderItem(OrderItemCreationRequest) returns (ItemResponse);
	rpc DeleteOrderItem(OrderItemDeletionRequest) returns (google.protobuf.Empty);
	rpc UpdateOrderItem(OrderItemUpdateRequest) returns (google.protobuf.Empty);
	rpc IncreaseQuantityOrderItemBy1 (ItemRequest) returns (ItemResponse);
	rpc DecreaseQuantityOrderItemBy1 (ItemRequest) returns (ItemDecrementResponse);
}

message ItemDecrementResponse{ 
	string order_id = 1;
	string product_id = 2;
	int32 quantity = 3;
	bool is_null = 4;
}

message ItemRequest{
	string order_id = 1;
	string product_id = 2;
}

message OrderItemUpdateRequest{ 
	string order_id = 1;
	string product_id = 2;
	int32 quantity = 3;
}

message OrderItemDeletionRequest{ 
	string order_id = 1;
	string product_id = 2;
}

message OrderItemCreationRequest{ 
	string order_id = 1;
	string product_id = 2;
	int32 quantity = 3;
}

message OrderItemIdRequest{ 
	string order_id = 1;
}

message ItemListResponse{ 
	repeated ItemResponse items = 1;
}

message GetItemRequest{ 
	string order_id = 1;
	string product_id = 2;
}

message ItemResponse{ 
	string order_id = 1;
	string product_id = 2;
	int32 quantity = 3;
}